# site

./: .gitignore  README.md  acatalepsie.nix  cabal.project  release.nix  site.cabal
content/: index.rst  projects.rst  quid.rst  readings.yaml  visual.rst
content/assets/: theme.css
content/posts/: 2020-04-13-a-first-entry.rst  2020-04-14-univalent-parametricity-in-agda.lagda.rst  2020-05-21-generic-genericity.lagda.rst  2020-09-26-syndication.rst
content/projects/achille/: index.markdown
content/projects/achille/pages/: 1-motivation.markdown  2-how-it-works.markdown  3-a-blog-from-scratch.markdown  4-examples.markdown
content/projects/jibniz/: index.markdown
content/projects/troid/: index.rst
src/: Common.hs  Config.hs  Feed.hs  Main.hs  Page.hs  Posts.hs  Projects.hs  Readings.hs  Templates.hs  Types.hs  Visual.hs
