cabal-version:       >=1.10
name:                site
version:             0.1.0.0
author:              flupe
maintainer:          lucas@escot.me
build-type:          Simple

executable site
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       Templates
                     , Types
                     , Page
                     , Posts
                     , Projects
                     , Common
                     , Config
                     , Visual
  build-depends:       base >=4.12 && <4.13
                     , filepath
                     , achille
                     , data-default
                     , blaze-html
                     , blaze-markup
                     , pandoc
                     , pandoc-types
                     , text
                     , bytestring
                     , filepath
                     , frontmatter
                     , aeson
                     , yaml
                     , binary
                     , containers
                     , dates
                     , sort
                     , feed
                     , time
                     , xml-types
                     , binary-instances
  extensions:          BlockArguments
                     , TupleSections
                     , OverloadedStrings
                     , ScopedTypeVariables
  other-modules:       Templates
  ghc-options:       -threaded
                     -j8
  default-language:    Haskell2010
