cabal-version:       >=1.10
name:                site
version:             0.1.0.0
author:              flupe
maintainer:          lucas@escot.me
build-type:          Simple

executable site
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       Templates
                     , Types
                     , Page
                     , Posts
                     , Projects
                     , Common
                     , Config
                     , Visual
                     , Templates
  build-depends:       base >=4.12 && <4.13
                     , filepath
                     , achille
                     , data-default
                     , pandoc
                     , pandoc-types
                     , text
                     , bytestring
                     , filepath
                     , frontmatter
                     , aeson
                     , yaml
                     , binary
                     , containers
                     , sort
                     , feed
                     , time
                     , lucid
                     , binary-instances
  extensions:          BlockArguments
                     , TupleSections
                     , OverloadedStrings
                     , ScopedTypeVariables
                     , DeriveGeneric
                     , DeriveAnyClass
  ghc-options:       -threaded
                     -j8
                     -O2
  default-language:    Haskell2010
