cabal-version:       >=1.10
name:                site
version:             0.1.0.0
author:              flupe
maintainer:          lucas@escot.me
build-type:          Simple

executable site
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       Templates
                     , Types
                     , Posts
                     , Projects
                     , Common
                     , Config
                     , Visual
                     , Templates
                     , Readings
  build-depends:       base >= 4.12 && < 5
                     , filepath
                     , achille
                     , data-default
                     , pandoc
                     , pandoc-types
                     , text
                     , bytestring
                     , filepath
                     , aeson
                     , yaml
                     , binary
                     , containers
                     , sort
                     , feed
                     , time
                     , lucid
  extensions:          BlockArguments
                     , TupleSections
                     , OverloadedStrings
                     , ScopedTypeVariables
                     , DeriveGeneric
                     , DeriveAnyClass
                     , RecordWildCards
                     , NamedFieldPuns
  ghc-options:       -threaded
                     -j8
                     -O2
  default-language:    Haskell2010
